--- a/school/3d/octahedron.html
+++ b/school/3d/octahedron.html
@@ -5,7 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>octahedron</title>
-    <script id="vertex-shader" type="x-shader/x-vertex"></script>
+    <script id="vertex-shader" type="x-shader/x-vertex">
+      attribute vec4 vPosition;
+      attribute vec4 vColor;
+      varying vec4 fColor;
+
+      uniform vec3 theta;
+
+      void main(){
+        vec3 angles = radians(theta);
+        vec3 c = cos(angles);
+        vec3 s = sin(angles);
+
+        mat4 rx = mat4(
+          1.0, 0.0, 0.0, 0.0,
+          0.0, c.x, s.x, 0.0,
+          0.0, -s.x, c.x, 0.0,
+          0.0, 0.0, 0.0, 1.0
+          );
+        mat4 ry = mat4(
+          c.y, 0.0, -s.y, 0.0,
+          0.0, 1.0, 0.0, 0.0,
+          s.y, 0.0, c.y, 0.0,
+          0.0, 0.0, 0.0, 1.0
+          );
+        mat4 rz = mat4(
+          c.z, -s.z, 0.0, 0.0,
+          s.z, c.z, 0.0, 0.0,
+          0.0, 0.0, 1.0, 0.0,
+          0.0, 0.0, 0.0, 1.0
+          );
+        fColor = vColor;
+        gl_Position = rz * ry * rx * vPosition;
+      }
+    </script>
     <script id="fragment-shader" type="x-shader/x-fragment"></script>
     <script type="text/javascript" src="../../Common/webgl-utils.js"></script>
     <script type="text/javascript" src="../../Common/initShaders.js"></script>
