--- a/school/3d/octahedron.html
+++ b/school/3d/octahedron.html
@@ -55,15 +55,25 @@
     <script type="text/javascript" src="octahedron.js"></script>
   </head>
   <body>
-    <canvas
-      id="gl-canvas"
-      width="512"
-      height="512"
-      style="position: relative; border: 1px solid black"
-      >gl is not supported
-    </canvas>
+    <div>
+      <canvas
+        id="gl-canvas"
+        width="512"
+        height="512"
+        style="position: relative; border: 1px solid black"
+        >gl is not supported
+      </canvas>
+      <img
+        id="img1"
+        src="./hit/sprite_0.png"
+        width="100px"
+        style="position: relative"
+      />
+      <p>score:</p>
+      <p id="score">0</p>
+    </div>
     <br />
-
+    <!-- 
     <button id="xBtn">Rotate X</button>
     <button id="yBtn">Rotate Y</button>
     <button id="zBtn">Rotate Z</button>
@@ -72,6 +82,7 @@
 
     <button id="xMoveBtn">move X</button>
     <button id="yMoveBtn">move Y</button>
-    <button id="zMoveBtn">move Z</button>
+    <button id="zMoveBtn">move Z</button> -->
+    <br />
   </body>
 </html>
