--- a/school/3d/octahedron.html
+++ b/school/3d/octahedron.html
@@ -81,8 +81,13 @@
     <br />
 
     <button id="xMoveBtn">move X</button>
-    <button id="yMoveBtn">move Y</button>
-    <button id="zMoveBtn">move Z</button> -->
+    <button id="yMoveBtn">move Y</button>-->
+    <button id="stop">stop</button>
     <br />
+    <details style="text-align: center; float: right; margin-right: 100px">
+      <summary>Catch Ball Game Rule</summary>
+      <h1>when "hit" mark shows up, click canvas to throw the ball back.</h1>
+      <h1>After clicked, get 1 point.</h1>
+    </details>
   </body>
 </html>
